[package]
name = "s3-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusoto_s3 = "0.48.0"
rusoto_core = "0.48.0"
tokio = { version = "1", features = ["full"] }
futures-lite = "1.12.0"
dotenv = "0.15.0"
anyhow = "1.0.66"
